testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail02.stderr

overloadedrecfldsfail02.hs:8:18: error:
    Ambiguous occurrence ‘x’
    It could refer to
       either the field ‘x’ of record ‘S’,
              defined at overloadedrecfldsfail02.hs:6:16
           or the field ‘x’ of record ‘R’,
              defined at overloadedrecfldsfail02.hs:5:16
